compilateur/compiler.output
Terminaux inutilisés dans la grammaire

   tCONST
   tSTRING
   tRETURN
   tDO
   tSCANF
   tGUILLEMET
   tCROCHETGAUCHE
   tCROCHETDROIT
   tPOINTEXCLAMATION
   tPOINTINTERROGATION


Grammaire

    0 $accept: Start $end

    1 Start: tVAR tMAIN tPO tPF tAO Body tAF

    2 Body: declarations instructions
    3     | declarations
    4     | instructions
    5     | %empty

    6 declarations: declaration declarations
    7             | declaration

    8 declaration: decl_type tID tPOINTVIRGULE
    9            | decl_type tID tVIRGULE dec
   10            | decl_type tID tEGAL Exp tPOINTVIRGULE

   11 decl_type: tVAR

   12 dec: tID tPOINTVIRGULE
   13    | tID tVIRGULE dec

   14 instructions: instruction instructions
   15             | instruction

   16 instruction: tID tEGAL Exp tPOINTVIRGULE
   17            | tPRINTF tPO tID tPF tPOINTVIRGULE
   18            | tIF tPO boolean tPF if_action tAO Body tAF
   19            | tIF tPO boolean tPF if_action tAO Body tAF tELSE tAO Body tAF
   20            | tWHILE tPO boolean tPF tAO Body tAF
   21            | tFOR tPO tID tEGAL tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tPLUSPLUS tPF tAO Body tAF
   22            | tFOR tPO tID tEGAL tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tMOINSMOINS tPF tAO Body tAF

   23 if_action: %empty

   24 boolean: boolean tDEGAL boolean
   25        | boolean tDIF boolean
   26        | boolean tINF boolean
   27        | boolean tSUP boolean
   28        | boolean tINFEGAL boolean
   29        | boolean tSUPEGAL boolean
   30        | tINT
   31        | tID

   32 Exp: Exp tADDITION Exp
   33    | Exp tSOUSTRACTION Exp
   34    | Exp tDIV Exp
   35    | Exp tMULT Exp
   36    | tINT
   37    | tID
   38    | tPO Exp tPF


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tID (258) 8 9 10 12 13 16 17 21 22 31 37
tPO (259) 1 17 18 19 20 21 22 38
tPF (260) 1 17 18 19 20 21 22 38
tAO (261) 1 18 19 20 21 22
tAF (262) 1 18 19 20 21 22
tMAIN (263) 1
tCONST (264)
tSTRING (265)
tINT (266) 21 22 30 36
tVAR (267) 1 11
tIF (268) 18 19
tWHILE (269) 20
tFOR (270) 21 22
tELSE (271) 19
tRETURN (272)
tDO (273)
tPRINTF (274) 17
tSCANF (275)
tMULT (276) 35
tSOUSTRACTION (277) 33
tADDITION (278) 32
tDIV (279) 34
tGUILLEMET (280)
tCROCHETGAUCHE (281)
tCROCHETDROIT (282)
tPOINTVIRGULE (283) 8 10 12 16 17 21 22
tVIRGULE (284) 9 13
tEGAL (285) 10 16 21 22
tDEGAL (286) 24
tDIF (287) 25
tPOINTEXCLAMATION (288)
tPOINTINTERROGATION (289)
tINF (290) 26
tSUP (291) 27
tINFEGAL (292) 28
tSUPEGAL (293) 29
tPLUSPLUS (294) 21
tMOINSMOINS (295) 22
tIFX (296)


Non-terminaux, suivis des règles où ils apparaissent

$accept (42)
    à gauche: 0
Start (43)
    à gauche: 1, à droite: 0
Body (44)
    à gauche: 2 3 4 5, à droite: 1 18 19 20 21 22
declarations (45)
    à gauche: 6 7, à droite: 2 3 6
declaration (46)
    à gauche: 8 9 10, à droite: 6 7
decl_type (47)
    à gauche: 11, à droite: 8 9 10
dec (48)
    à gauche: 12 13, à droite: 9 13
instructions (49)
    à gauche: 14 15, à droite: 2 4 14
instruction (50)
    à gauche: 16 17 18 19 20 21 22, à droite: 14 15
if_action (51)
    à gauche: 23, à droite: 18 19
boolean (52)
    à gauche: 24 25 26 27 28 29 30 31, à droite: 18 19 20 21 22 24
    25 26 27 28 29
Exp (53)
    à gauche: 32 33 34 35 36 37 38, à droite: 10 16 32 33 34 35 38


État 0

    0 $accept: . Start $end

    tVAR  décalage et aller à l'état 1

    Start  aller à l'état 2


État 1

    1 Start: tVAR . tMAIN tPO tPF tAO Body tAF

    tMAIN  décalage et aller à l'état 3


État 2

    0 $accept: Start . $end

    $end  décalage et aller à l'état 4


État 3

    1 Start: tVAR tMAIN . tPO tPF tAO Body tAF

    tPO  décalage et aller à l'état 5


État 4

    0 $accept: Start $end .

    $défaut  accepter


État 5

    1 Start: tVAR tMAIN tPO . tPF tAO Body tAF

    tPF  décalage et aller à l'état 6


État 6

    1 Start: tVAR tMAIN tPO tPF . tAO Body tAF

    tAO  décalage et aller à l'état 7


État 7

    1 Start: tVAR tMAIN tPO tPF tAO . Body tAF

    tID      décalage et aller à l'état 8
    tVAR     décalage et aller à l'état 9
    tIF      décalage et aller à l'état 10
    tWHILE   décalage et aller à l'état 11
    tFOR     décalage et aller à l'état 12
    tPRINTF  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 5 (Body)

    Body          aller à l'état 14
    declarations  aller à l'état 15
    declaration   aller à l'état 16
    decl_type     aller à l'état 17
    instructions  aller à l'état 18
    instruction   aller à l'état 19


État 8

   16 instruction: tID . tEGAL Exp tPOINTVIRGULE

    tEGAL  décalage et aller à l'état 20


État 9

   11 decl_type: tVAR .

    $défaut  réduction par utilisation de la règle 11 (decl_type)


État 10

   18 instruction: tIF . tPO boolean tPF if_action tAO Body tAF
   19            | tIF . tPO boolean tPF if_action tAO Body tAF tELSE tAO Body tAF

    tPO  décalage et aller à l'état 21


État 11

   20 instruction: tWHILE . tPO boolean tPF tAO Body tAF

    tPO  décalage et aller à l'état 22


État 12

   21 instruction: tFOR . tPO tID tEGAL tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tPLUSPLUS tPF tAO Body tAF
   22            | tFOR . tPO tID tEGAL tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tMOINSMOINS tPF tAO Body tAF

    tPO  décalage et aller à l'état 23


État 13

   17 instruction: tPRINTF . tPO tID tPF tPOINTVIRGULE

    tPO  décalage et aller à l'état 24


État 14

    1 Start: tVAR tMAIN tPO tPF tAO Body . tAF

    tAF  décalage et aller à l'état 25


État 15

    2 Body: declarations . instructions
    3     | declarations .

    tID      décalage et aller à l'état 8
    tIF      décalage et aller à l'état 10
    tWHILE   décalage et aller à l'état 11
    tFOR     décalage et aller à l'état 12
    tPRINTF  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 3 (Body)

    instructions  aller à l'état 26
    instruction   aller à l'état 19


État 16

    6 declarations: declaration . declarations
    7             | declaration .

    tVAR  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 7 (declarations)

    declarations  aller à l'état 27
    declaration   aller à l'état 16
    decl_type     aller à l'état 17


État 17

    8 declaration: decl_type . tID tPOINTVIRGULE
    9            | decl_type . tID tVIRGULE dec
   10            | decl_type . tID tEGAL Exp tPOINTVIRGULE

    tID  décalage et aller à l'état 28


État 18

    4 Body: instructions .

    $défaut  réduction par utilisation de la règle 4 (Body)


État 19

   14 instructions: instruction . instructions
   15             | instruction .

    tID      décalage et aller à l'état 8
    tIF      décalage et aller à l'état 10
    tWHILE   décalage et aller à l'état 11
    tFOR     décalage et aller à l'état 12
    tPRINTF  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 15 (instructions)

    instructions  aller à l'état 29
    instruction   aller à l'état 19


État 20

   16 instruction: tID tEGAL . Exp tPOINTVIRGULE

    tID   décalage et aller à l'état 30
    tPO   décalage et aller à l'état 31
    tINT  décalage et aller à l'état 32

    Exp  aller à l'état 33


État 21

   18 instruction: tIF tPO . boolean tPF if_action tAO Body tAF
   19            | tIF tPO . boolean tPF if_action tAO Body tAF tELSE tAO Body tAF

    tID   décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35

    boolean  aller à l'état 36


État 22

   20 instruction: tWHILE tPO . boolean tPF tAO Body tAF

    tID   décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35

    boolean  aller à l'état 37


État 23

   21 instruction: tFOR tPO . tID tEGAL tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tPLUSPLUS tPF tAO Body tAF
   22            | tFOR tPO . tID tEGAL tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tMOINSMOINS tPF tAO Body tAF

    tID  décalage et aller à l'état 38


État 24

   17 instruction: tPRINTF tPO . tID tPF tPOINTVIRGULE

    tID  décalage et aller à l'état 39


État 25

    1 Start: tVAR tMAIN tPO tPF tAO Body tAF .

    $défaut  réduction par utilisation de la règle 1 (Start)


État 26

    2 Body: declarations instructions .

    $défaut  réduction par utilisation de la règle 2 (Body)


État 27

    6 declarations: declaration declarations .

    $défaut  réduction par utilisation de la règle 6 (declarations)


État 28

    8 declaration: decl_type tID . tPOINTVIRGULE
    9            | decl_type tID . tVIRGULE dec
   10            | decl_type tID . tEGAL Exp tPOINTVIRGULE

    tPOINTVIRGULE  décalage et aller à l'état 40
    tVIRGULE       décalage et aller à l'état 41
    tEGAL          décalage et aller à l'état 42


État 29

   14 instructions: instruction instructions .

    $défaut  réduction par utilisation de la règle 14 (instructions)


État 30

   37 Exp: tID .

    $défaut  réduction par utilisation de la règle 37 (Exp)


État 31

   38 Exp: tPO . Exp tPF

    tID   décalage et aller à l'état 30
    tPO   décalage et aller à l'état 31
    tINT  décalage et aller à l'état 32

    Exp  aller à l'état 43


État 32

   36 Exp: tINT .

    $défaut  réduction par utilisation de la règle 36 (Exp)


État 33

   16 instruction: tID tEGAL Exp . tPOINTVIRGULE
   32 Exp: Exp . tADDITION Exp
   33    | Exp . tSOUSTRACTION Exp
   34    | Exp . tDIV Exp
   35    | Exp . tMULT Exp

    tMULT          décalage et aller à l'état 44
    tSOUSTRACTION  décalage et aller à l'état 45
    tADDITION      décalage et aller à l'état 46
    tDIV           décalage et aller à l'état 47
    tPOINTVIRGULE  décalage et aller à l'état 48


État 34

   31 boolean: tID .

    $défaut  réduction par utilisation de la règle 31 (boolean)


État 35

   30 boolean: tINT .

    $défaut  réduction par utilisation de la règle 30 (boolean)


État 36

   18 instruction: tIF tPO boolean . tPF if_action tAO Body tAF
   19            | tIF tPO boolean . tPF if_action tAO Body tAF tELSE tAO Body tAF
   24 boolean: boolean . tDEGAL boolean
   25        | boolean . tDIF boolean
   26        | boolean . tINF boolean
   27        | boolean . tSUP boolean
   28        | boolean . tINFEGAL boolean
   29        | boolean . tSUPEGAL boolean

    tPF       décalage et aller à l'état 49
    tDEGAL    décalage et aller à l'état 50
    tDIF      décalage et aller à l'état 51
    tINF      décalage et aller à l'état 52
    tSUP      décalage et aller à l'état 53
    tINFEGAL  décalage et aller à l'état 54
    tSUPEGAL  décalage et aller à l'état 55


État 37

   20 instruction: tWHILE tPO boolean . tPF tAO Body tAF
   24 boolean: boolean . tDEGAL boolean
   25        | boolean . tDIF boolean
   26        | boolean . tINF boolean
   27        | boolean . tSUP boolean
   28        | boolean . tINFEGAL boolean
   29        | boolean . tSUPEGAL boolean

    tPF       décalage et aller à l'état 56
    tDEGAL    décalage et aller à l'état 50
    tDIF      décalage et aller à l'état 51
    tINF      décalage et aller à l'état 52
    tSUP      décalage et aller à l'état 53
    tINFEGAL  décalage et aller à l'état 54
    tSUPEGAL  décalage et aller à l'état 55


État 38

   21 instruction: tFOR tPO tID . tEGAL tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tPLUSPLUS tPF tAO Body tAF
   22            | tFOR tPO tID . tEGAL tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tMOINSMOINS tPF tAO Body tAF

    tEGAL  décalage et aller à l'état 57


État 39

   17 instruction: tPRINTF tPO tID . tPF tPOINTVIRGULE

    tPF  décalage et aller à l'état 58


État 40

    8 declaration: decl_type tID tPOINTVIRGULE .

    $défaut  réduction par utilisation de la règle 8 (declaration)


État 41

    9 declaration: decl_type tID tVIRGULE . dec

    tID  décalage et aller à l'état 59

    dec  aller à l'état 60


État 42

   10 declaration: decl_type tID tEGAL . Exp tPOINTVIRGULE

    tID   décalage et aller à l'état 30
    tPO   décalage et aller à l'état 31
    tINT  décalage et aller à l'état 32

    Exp  aller à l'état 61


État 43

   32 Exp: Exp . tADDITION Exp
   33    | Exp . tSOUSTRACTION Exp
   34    | Exp . tDIV Exp
   35    | Exp . tMULT Exp
   38    | tPO Exp . tPF

    tPF            décalage et aller à l'état 62
    tMULT          décalage et aller à l'état 44
    tSOUSTRACTION  décalage et aller à l'état 45
    tADDITION      décalage et aller à l'état 46
    tDIV           décalage et aller à l'état 47


État 44

   35 Exp: Exp tMULT . Exp

    tID   décalage et aller à l'état 30
    tPO   décalage et aller à l'état 31
    tINT  décalage et aller à l'état 32

    Exp  aller à l'état 63


État 45

   33 Exp: Exp tSOUSTRACTION . Exp

    tID   décalage et aller à l'état 30
    tPO   décalage et aller à l'état 31
    tINT  décalage et aller à l'état 32

    Exp  aller à l'état 64


État 46

   32 Exp: Exp tADDITION . Exp

    tID   décalage et aller à l'état 30
    tPO   décalage et aller à l'état 31
    tINT  décalage et aller à l'état 32

    Exp  aller à l'état 65


État 47

   34 Exp: Exp tDIV . Exp

    tID   décalage et aller à l'état 30
    tPO   décalage et aller à l'état 31
    tINT  décalage et aller à l'état 32

    Exp  aller à l'état 66


État 48

   16 instruction: tID tEGAL Exp tPOINTVIRGULE .

    $défaut  réduction par utilisation de la règle 16 (instruction)


État 49

   18 instruction: tIF tPO boolean tPF . if_action tAO Body tAF
   19            | tIF tPO boolean tPF . if_action tAO Body tAF tELSE tAO Body tAF

    $défaut  réduction par utilisation de la règle 23 (if_action)

    if_action  aller à l'état 67


État 50

   24 boolean: boolean tDEGAL . boolean

    tID   décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35

    boolean  aller à l'état 68


État 51

   25 boolean: boolean tDIF . boolean

    tID   décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35

    boolean  aller à l'état 69


État 52

   26 boolean: boolean tINF . boolean

    tID   décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35

    boolean  aller à l'état 70


État 53

   27 boolean: boolean tSUP . boolean

    tID   décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35

    boolean  aller à l'état 71


État 54

   28 boolean: boolean tINFEGAL . boolean

    tID   décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35

    boolean  aller à l'état 72


État 55

   29 boolean: boolean tSUPEGAL . boolean

    tID   décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35

    boolean  aller à l'état 73


État 56

   20 instruction: tWHILE tPO boolean tPF . tAO Body tAF

    tAO  décalage et aller à l'état 74


État 57

   21 instruction: tFOR tPO tID tEGAL . tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tPLUSPLUS tPF tAO Body tAF
   22            | tFOR tPO tID tEGAL . tINT tPOINTVIRGULE boolean tPOINTVIRGULE tID tMOINSMOINS tPF tAO Body tAF

    tINT  décalage et aller à l'état 75


État 58

   17 instruction: tPRINTF tPO tID tPF . tPOINTVIRGULE

    tPOINTVIRGULE  décalage et aller à l'état 76


État 59

   12 dec: tID . tPOINTVIRGULE
   13    | tID . tVIRGULE dec

    tPOINTVIRGULE  décalage et aller à l'état 77
    tVIRGULE       décalage et aller à l'état 78


État 60

    9 declaration: decl_type tID tVIRGULE dec .

    $défaut  réduction par utilisation de la règle 9 (declaration)


État 61

   10 declaration: decl_type tID tEGAL Exp . tPOINTVIRGULE
   32 Exp: Exp . tADDITION Exp
   33    | Exp . tSOUSTRACTION Exp
   34    | Exp . tDIV Exp
   35    | Exp . tMULT Exp

    tMULT          décalage et aller à l'état 44
    tSOUSTRACTION  décalage et aller à l'état 45
    tADDITION      décalage et aller à l'état 46
    tDIV           décalage et aller à l'état 47
    tPOINTVIRGULE  décalage et aller à l'état 79


État 62

   38 Exp: tPO Exp tPF .

    $défaut  réduction par utilisation de la règle 38 (Exp)


État 63

   32 Exp: Exp . tADDITION Exp
   33    | Exp . tSOUSTRACTION Exp
   34    | Exp . tDIV Exp
   35    | Exp . tMULT Exp
   35    | Exp tMULT Exp .

    $défaut  réduction par utilisation de la règle 35 (Exp)


État 64

   32 Exp: Exp . tADDITION Exp
   33    | Exp . tSOUSTRACTION Exp
   33    | Exp tSOUSTRACTION Exp .
   34    | Exp . tDIV Exp
   35    | Exp . tMULT Exp

    tMULT  décalage et aller à l'état 44
    tDIV   décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 33 (Exp)


État 65

   32 Exp: Exp . tADDITION Exp
   32    | Exp tADDITION Exp .
   33    | Exp . tSOUSTRACTION Exp
   34    | Exp . tDIV Exp
   35    | Exp . tMULT Exp

    tMULT  décalage et aller à l'état 44
    tDIV   décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 32 (Exp)


État 66

   32 Exp: Exp . tADDITION Exp
   33    | Exp . tSOUSTRACTION Exp
   34    | Exp . tDIV Exp
   34    | Exp tDIV Exp .
   35    | Exp . tMULT Exp

    $défaut  réduction par utilisation de la règle 34 (Exp)


État 67

   18 instruction: tIF tPO boolean tPF if_action . tAO Body tAF
   19            | tIF tPO boolean tPF if_action . tAO Body tAF tELSE tAO Body tAF

    tAO  décalage et aller à l'état 80


État 68

   24 boolean: boolean . tDEGAL boolean
   24        | boolean tDEGAL boolean .
   25        | boolean . tDIF boolean
   26        | boolean . tINF boolean
   27        | boolean . tSUP boolean
   28        | boolean . tINFEGAL boolean
   29        | boolean . tSUPEGAL boolean

    tINF      décalage et aller à l'état 52
    tSUP      décalage et aller à l'état 53
    tINFEGAL  décalage et aller à l'état 54
    tSUPEGAL  décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 24 (boolean)


État 69

   24 boolean: boolean . tDEGAL boolean
   25        | boolean . tDIF boolean
   25        | boolean tDIF boolean .
   26        | boolean . tINF boolean
   27        | boolean . tSUP boolean
   28        | boolean . tINFEGAL boolean
   29        | boolean . tSUPEGAL boolean

    tINF      décalage et aller à l'état 52
    tSUP      décalage et aller à l'état 53
    tINFEGAL  décalage et aller à l'état 54
    tSUPEGAL  décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 25 (boolean)


État 70

   24 boolean: boolean . tDEGAL boolean
   25        | boolean . tDIF boolean
   26        | boolean . tINF boolean
   26        | boolean tINF boolean .
   27        | boolean . tSUP boolean
   28        | boolean . tINFEGAL boolean
   29        | boolean . tSUPEGAL boolean

    $défaut  réduction par utilisation de la règle 26 (boolean)


État 71

   24 boolean: boolean . tDEGAL boolean
   25        | boolean . tDIF boolean
   26        | boolean . tINF boolean
   27        | boolean . tSUP boolean
   27        | boolean tSUP boolean .
   28        | boolean . tINFEGAL boolean
   29        | boolean . tSUPEGAL boolean

    $défaut  réduction par utilisation de la règle 27 (boolean)


État 72

   24 boolean: boolean . tDEGAL boolean
   25        | boolean . tDIF boolean
   26        | boolean . tINF boolean
   27        | boolean . tSUP boolean
   28        | boolean . tINFEGAL boolean
   28        | boolean tINFEGAL boolean .
   29        | boolean . tSUPEGAL boolean

    $défaut  réduction par utilisation de la règle 28 (boolean)


État 73

   24 boolean: boolean . tDEGAL boolean
   25        | boolean . tDIF boolean
   26        | boolean . tINF boolean
   27        | boolean . tSUP boolean
   28        | boolean . tINFEGAL boolean
   29        | boolean . tSUPEGAL boolean
   29        | boolean tSUPEGAL boolean .

    $défaut  réduction par utilisation de la règle 29 (boolean)


État 74

   20 instruction: tWHILE tPO boolean tPF tAO . Body tAF

    tID      décalage et aller à l'état 8
    tVAR     décalage et aller à l'état 9
    tIF      décalage et aller à l'état 10
    tWHILE   décalage et aller à l'état 11
    tFOR     décalage et aller à l'état 12
    tPRINTF  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 5 (Body)

    Body          aller à l'état 81
    declarations  aller à l'état 15
    declaration   aller à l'état 16
    decl_type     aller à l'état 17
    instructions  aller à l'état 18
    instruction   aller à l'état 19


État 75

   21 instruction: tFOR tPO tID tEGAL tINT . tPOINTVIRGULE boolean tPOINTVIRGULE tID tPLUSPLUS tPF tAO Body tAF
   22            | tFOR tPO tID tEGAL tINT . tPOINTVIRGULE boolean tPOINTVIRGULE tID tMOINSMOINS tPF tAO Body tAF

    tPOINTVIRGULE  décalage et aller à l'état 82


État 76

   17 instruction: tPRINTF tPO tID tPF tPOINTVIRGULE .

    $défaut  réduction par utilisation de la règle 17 (instruction)


État 77

   12 dec: tID tPOINTVIRGULE .

    $défaut  réduction par utilisation de la règle 12 (dec)


État 78

   13 dec: tID tVIRGULE . dec

    tID  décalage et aller à l'état 59

    dec  aller à l'état 83


État 79

   10 declaration: decl_type tID tEGAL Exp tPOINTVIRGULE .

    $défaut  réduction par utilisation de la règle 10 (declaration)


État 80

   18 instruction: tIF tPO boolean tPF if_action tAO . Body tAF
   19            | tIF tPO boolean tPF if_action tAO . Body tAF tELSE tAO Body tAF

    tID      décalage et aller à l'état 8
    tVAR     décalage et aller à l'état 9
    tIF      décalage et aller à l'état 10
    tWHILE   décalage et aller à l'état 11
    tFOR     décalage et aller à l'état 12
    tPRINTF  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 5 (Body)

    Body          aller à l'état 84
    declarations  aller à l'état 15
    declaration   aller à l'état 16
    decl_type     aller à l'état 17
    instructions  aller à l'état 18
    instruction   aller à l'état 19


État 81

   20 instruction: tWHILE tPO boolean tPF tAO Body . tAF

    tAF  décalage et aller à l'état 85


État 82

   21 instruction: tFOR tPO tID tEGAL tINT tPOINTVIRGULE . boolean tPOINTVIRGULE tID tPLUSPLUS tPF tAO Body tAF
   22            | tFOR tPO tID tEGAL tINT tPOINTVIRGULE . boolean tPOINTVIRGULE tID tMOINSMOINS tPF tAO Body tAF

    tID   décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35

    boolean  aller à l'état 86


État 83

   13 dec: tID tVIRGULE dec .

    $défaut  réduction par utilisation de la règle 13 (dec)


État 84

   18 instruction: tIF tPO boolean tPF if_action tAO Body . tAF
   19            | tIF tPO boolean tPF if_action tAO Body . tAF tELSE tAO Body tAF

    tAF  décalage et aller à l'état 87


État 85

   20 instruction: tWHILE tPO boolean tPF tAO Body tAF .

    $défaut  réduction par utilisation de la règle 20 (instruction)


État 86
